fix for bkgd fixed on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,3 +364,8 @@ padding: 0px;
         width: 50vw;
     }
 }
+/* CREDIT to fix probelm with background fixed on ios devices https://www.codegrepper.com/code-examples/delphi/css+target+ios+device+only */
+@supports (-webkit-touch-callout: none) {
+   .storysomm{
+      background: url("../images/story.jpg") no-repeat center center
+}
